Fix "new messages" popup with big channel list
If the channel list is too long and there are new messages beyond the
current scope, there is a message that tells you that there are new
messages. This had an incorrect background color. Now it has the correct
secondary background color.

--- a/Firefox/userContent/newtab.css
+++ b/Firefox/userContent/newtab.css
@@ -1,7 +1,7 @@
-#root {
+body {
   background: var(--bg-color) !important;
 }
 
-.prefs-button {
+body * {
   display: none !important;
 }
